--- a/style css/style.css
+++ b/style css/style.css
@@ -1,3 +1,18 @@
+@font-face {
+	font-family: 'segoeui';
+	src: url('libs/segoeui/SegoeUI-Light.eot');
+	src: local('Segoe UI Light'), local('SegoeUI-Light'),
+		url('libs/segoeui/SegoeUI-Light.eot?#iefix') format('embedded-opentype'),
+		url('libs/segoeui/SegoeUI-Light.woff') format('woff'),
+		url('libs/segoeui/SegoeUI-Light.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+a, button {
+    font-family: "segoeui";
+}
+
 a {
     text-decoration: none;
 }
@@ -16,6 +31,11 @@ li {
     list-style-type: none;
 }
 
+body {
+    background: url(../img/bg-header.png) no-repeat center 0;
+    background-size: color;
+}
+
 .container {
     max-width: 1024px;
     margin: auto;
@@ -24,8 +44,9 @@ li {
 /* HEADER STYLES */
 
 .header {
-    background: #fff;
+    background: #ffffffed;
     padding: 18px 15px;
+    box-shadow: 0 1px 4px 0 #00000057;
 }
 
 .header__main {
@@ -40,11 +61,42 @@ li {
 
 .header__menu {
     display: flex;
+    margin-right: 40px;
 }
 
 .header__menu-link {
     display: block;
     padding: 10px 19px;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color: #737373;
+    font-size: 17px;
+    opacity: 0.75;
 }
+
+.header__menu-link:hover {
+    text-decoration: underline;
+}
+
+.header__menu-item:last-child .header__menu-link {
+    padding-right: 0;
+}
+
+.header__login {
+    background: #de6d6e;
+    border: none;
+    border-radius: 3px;
+    padding: 5px 15px;
+    color: white;
+    font-weight: 600;
+    font-size: 17px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.header__login:hover {
+    background: #9f6565;
+}
+
+.header__login-icon {
+    margin-right: 5px;
+}
+
