--- a/style css/style.css
+++ b/style css/style.css
@@ -31,10 +31,11 @@ li {
     list-style-type: none;
 }
 
-body {
-    background: url(../img/bg-header.png) no-repeat center;
-    background-size: cover;
-
+.bg-pink {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    max-height: 588px;
 }
 
 .container {
@@ -107,14 +108,14 @@ body {
     text-align: center;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 20%;
+    margin-top: 315px;
     margin-bottom: 85px;
 }
 
 .banner__main {
     font-size: 49px;
     text-transform: uppercase;
-    margin: 0 0 18px 0;
+    margin: 0 0 23px 0;
 }
 
 .banner__text {
