--- a/style css/style.css
+++ b/style css/style.css
@@ -18,13 +18,17 @@ a {
 }
 
 ul, 
-body {
+body,
+h1,
+h2,
+p {
     margin: 0;
     padding: 0;
 }
 
 * {
     box-sizing: border-box;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 li {
@@ -108,7 +112,7 @@ li {
     text-align: center;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 315px;
+    margin-top: 280px;
     margin-bottom: 85px;
 }
 
@@ -124,35 +128,106 @@ li {
     font-weight: normal;
 }
 
-/* MEDIA */
+/* MAIN CONTANT STYLES */
+/* banner contant styles */
 
-@media (max-width: 640px) {
-
-.header__menu,
-.header__main {
-    flex-direction: column;
-    justify-content: center;
- }
-
- .header__nav, 
- .header__menu {
-    margin: auto;
- }
-
- .header__menu-item:last-child .header__menu-link {
-    padding-right: 18px;
- }
-
- .banner {
-    margin-top: 3%;
-    margin-bottom: 22px;
-    padding: 0 15px;
- }
- .banner__main {
-    font-size: 30px;
-    margin: 0 0 10px 0;
- }
- .banner__text {
-    font-size: 18px;
- }
+.banner-content {
+    text-align: center;
 }
+.banner-content__main {
+    padding: 72px 0 30px 0;
+    margin: 0;
+    font-size: 35px;
+    font-weight: normal;
+}
+
+/* categories styles */
+
+.categories {
+    margin-top: 88px;
+}
+
+.categories__nav {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.categories__link {
+    display: flex;
+    height: 180px;
+    width: 180px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    position: relative;
+    margin: 8px;
+}
+
+.categories__link_bg_blue {
+    background: #4eb9f4;
+}
+
+.categories__link_bg_green {
+    background: #6fc125;
+}
+
+.categories__link_bg_red {
+    background: #ff5649;
+}
+
+.categories__link_bg_brown {
+    background: #e48f23;
+}
+
+.categories__title {
+    display: block;
+    margin-top: 10px;
+}
+
+.categories__desk {
+    display: none;
+    width: 125px;
+    height: 90px;
+    font-size: 12px;
+    position: absolute;
+    text-align: center;
+}
+
+.categories__link:hover .categories__desk {
+    display: block;
+}
+
+.categories__link:hover .categories__title, 
+.categories__link:hover .categories__img {
+    opacity: 0.5;
+}
+
+/* Articles block sytles */
+
+.articles {
+    margin-top: 95px;
+    padding-left: 65px;
+}
+
+.article {
+    margin-bottom: 75px;
+    display: flex;
+}
+
+.article__block {
+    padding-left: 25px;
+}
+
+.article__main {
+    font-weight: normal;
+    font-size: 27px;
+    margin-bottom: 25px;
+}
+
+.article__desk {
+    color: #8b8b8b;
+}
+
