--- a/media.css
+++ b/media.css
@@ -26,6 +26,12 @@
         }
     
     }
+
+    @media (max-width: 800px) {
+        .footer__menu-wrap {
+            margin-top: 15px;
+        }
+    }
         
     @media (max-width: 740px) {
     
@@ -77,6 +83,10 @@
         padding: 0;
         margin-top: 15px;
     }
+
+    .footer {
+        padding: 0;
+    }
     
     .article {
         margin-bottom: 15px;
@@ -88,4 +98,13 @@
     .article__block {
         padding: 0;
     }
+
+    .footer__menu-wrap {
+        margin-right: 20px;
+    }
+
+    .footer__social-link {
+        margin-right: 15px;
+    }
+
     }
